--- a/Workflow.bib
+++ b/Workflow.bib
@@ -52,6 +52,35 @@ year = {2013}
   langid = {english},
   file = {/home/alan/Documents/Papers/Robinson et al. - 2010 - edgeR a Bioconductor package for differential exp.pdf}
 }
+@article{Carpenter2017,
+ title={Stan: A Probabilistic Programming Language},
+ volume={76},
+ url={https://www.jstatsoft.org/index.php/jss/article/view/v076i01},
+ doi={10.18637/jss.v076.i01},
+ abstract={Stan is a probabilistic programming language for specifying statistical models. A Stan program imperatively defines a log probability function over parameters conditioned on specified data and constants. As of version 2.14.0, Stan provides full Bayesian inference for continuous-variable models through Markov chain Monte Carlo methods such as the No-U-Turn sampler, an adaptive form of Hamiltonian Monte Carlo sampling. Penalized maximum likelihood estimates are calculated using optimization methods such as the limited memory Broyden-Fletcher-Goldfarb-Shanno algorithm. Stan is also a platform for computing log densities and their gradients and Hessians, which can be used in alternative algorithms such as variational Bayes, expectation propagation, and marginal inference using approximate integration. To this end, Stan is set up so that the densities, gradients, and Hessians, along with intermediate quantities of the algorithm such as acceptance probabilities, are easily accessible. Stan can be called from the command line using the cmdstan package, through R using the rstan package, and through Python using the pystan package. All three interfaces support sampling and optimization-based inference with diagnostics and posterior analysis. rstan and pystan also provide access to log probabilities, gradients, Hessians, parameter transforms, and specialized plotting.},
+ number={1},
+ journal={Journal of Statistical Software},
+ author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D. and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+ year={2017},
+ pages={1--32}
+}
+
+@article{Bacher2016,
+  title = {Design and Computational Analysis of Single-Cell {{RNA-sequencing}} Experiments},
+  author = {Bacher, Rhonda and Kendziorski, Christina},
+  year = {2016},
+  month = dec,
+  journal = {Genome Biology},
+  volume = {17},
+  number = {1},
+  pages = {63},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-016-0927-y},
+  urldate = {2023-08-05},
+  langid = {english},
+  file = {/home/alan/Zotero/storage/M4EQEK5E/Bacher and Kendziorski - 2016 - Design and computational analysis of single-cell R.pdf}
+}
+
 @article{Delmans2016,
 abstract = {BACKGROUND The advent of high throughput RNA-seq at the single-cell level has opened up new opportunities to elucidate the heterogeneity of gene expression. One of the most widespread applications of RNA-seq is to identify genes which are differentially expressed between two experimental conditions. RESULTS We present a discrete, distributional method for differential gene expression (D(3)E), a novel algorithm specifically designed for single-cell RNA-seq data. We use synthetic data to evaluate D(3)E, demonstrating that it can detect changes in expression, even when the mean level remains unchanged. Since D(3)E is based on an analytically tractable stochastic model, it provides additional biological insights by quantifying biologically meaningful properties, such as the average burst size and frequency. We use D(3)E to investigate experimental data, and with the help of the underlying model, we directly test hypotheses about the driving mechanism behind changes in gene expression. CONCLUSION Evaluation using synthetic data shows that D(3)E performs better than other methods for identifying differentially expressed genes since it is designed to take full advantage of the information available from single-cell RNA-seq experiments. Moreover, the analytical model underlying D(3)E makes it possible to gain additional biological insights.},
 author = {Delmans, Mihails and Hemberg, Martin},
